# endfield-cat

./: .gitignore  AGENTS.md  LICENSE  README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  vite.config.ts
.github/workflows/: dev.yml  preview.yml  release.yml  tauri.yml
docs/: README_EN.md
scripts/: set-version.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_cmd.rs  database.rs  hg_auth.rs  lib.rs  main.rs
src-tauri/src/hg_api/: auth.rs  gacha.rs  log.rs  mod.rs  sync.rs  utils.rs
src-tauri/src/services/: config.rs  metadata.rs  mirror.rs  mod.rs  release.rs  update.rs
src/api/: hgGacha.ts  systemDialog.ts  tauriCommands.ts
src/charts/: echarts.ts
src/components/: MetadataUpdateDialog.vue  SplitButtonSelect.vue  TitleBar.vue  UpdateDialog.vue
src/components/charts/: DonutChart.vue
src/components/gacha/: AddAccountDialog.vue  BannerCard.vue
src/db/: accountDb.ts  db.ts  gachaDb.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/pages/: GachaPage.vue  GuidePage.vue  HomePage.vue  LauncherPage.vue  MainPage.vue  SettingsPage.vue
src/pages/GuidePage/: Disclaimer.vue  Main.vue  Ready.vue  Resource.vue  Update.vue  Welcome.vue
src/router/: index.ts
src/stores/: app.ts  gacha.ts  updater.ts
src/theme/: index.ts
src/utils/: channelId.ts
src/window/: windowState.ts
